<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/default_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_name_info"
                    android:layout_alignParentStart="true"
                    android:paddingRight="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/event_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_event_name"
                    android:layout_alignBaseline="@+id/event_name"
                    android:layout_alignBottom="@+id/event_name"
                    android:layout_toEndOf="@+id/event_name"
                    android:maxLines="1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">
                <TextView
                    android:id="@+id/event_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/event_name_text"
                    android:text="@string/event_description_info"
                    android:paddingRight="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/event_desc_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_event_desc"
                    android:layout_alignBaseline="@+id/event_desc"
                    android:layout_alignBottom="@+id/event_desc"
                    android:layout_toEndOf="@+id/event_desc"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_info"
                    android:layout_below="@+id/event_desc_text"
                    android:paddingRight="10dp"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/event_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_date"
                    android:layout_alignBaseline="@+id/event_date"
                    android:layout_alignBottom="@+id/event_date"
                    android:layout_toEndOf="@+id/event_date"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_event_info_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/activity_event_info_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remove"/>

        <Button
            android:id="@+id/activity_event_info_calendar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/return_to_calendar"/>
    </LinearLayout>
</LinearLayout>